--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ aiofiles==24.1.0
 aiogram==3.18.0
 aiohappyeyeballs==2.4.6
 aiohttp==3.11.12
+aioredis==2.0.1
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.8.0
+async-timeout==5.0.1
 attrs==25.1.0
 certifi==2025.1.31
 cfgv==3.4.0
@@ -40,9 +42,11 @@ pydantic-extra-types==2.10.2
 pydantic-settings==2.8.0
 pydantic_core==2.27.2
 Pygments==2.19.1
+PyJWT==2.10.1
 python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
+redis==5.2.1
 requests==2.32.3
 rich==13.9.4
 rich-toolkit==0.13.2
