--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,19 @@
 DEBUG=True
 
+# Services
 BASE_API_URL=http://artadas_api:8000
 AUTH_API_URL=http://artadas_auth:8000
+MINI_APP_URL="http://tma:3000"
+REDIS_URL=redis://redis:6379/0
+
+NGROK_URL=http://ngrok:4040
+WEBHOOK_URL=https://e20a-2a00-f3c-f4eb-0-61bf-17d5-3090-c90d.ngrok-free.app
 
 CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND=redis://redis:6379/0
 
 TG_BOT_TOKEN=123456:abcdef
 TG_FREE_GROUP_ID=-123456
-WEBHOOK_URL=https://e20a-2a00-f3c-f4eb-0-61bf-17d5-3090-c90d.ngrok-free.app
 
 # Should match with ones in other internal services
 INTERNAL_API_KEY=super-secret-for-internal-api-calls
