--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,7 @@ AUTH_API_URL=http://artadas_auth:8000
 MINI_APP_URL="http://tma:3000"
 REDIS_URL=redis://redis:6379/0
 
-NGROK_URL=http://ngrok:4040
-WEBHOOK_URL=https://e20a-2a00-f3c-f4eb-0-61bf-17d5-3090-c90d.ngrok-free.app
-
-CELERY_BROKER_URL=redis://redis:6379/0
-CELERY_RESULT_BACKEND=redis://redis:6379/0
+WEBHOOK_URL=https://artadas.com:8443
 
 TG_BOT_TOKEN=123456:abcdef
 TG_FREE_GROUP_ID=-123456
